# sphinx-meili-docsearch

./: .gitignore  AUTHORS  CHANGES.rst  README.rst  pyproject.toml
doc/: conf.py  index.rst
doc/_templates/: .gitignore
doc/components/: search-field.html
src/sphinx_meili_docsearch/: __init__.py
